@@ -4,6 +4,11 @@ Summary of important user-visible changes for releases of the control package
 control-2.3.54   Release Date: 2012-xx-yy   Release Manager: Lukas Reichlin
 ===============================================================================
 
+** Multiplot feature for frequency-domain plotting:
+   
+     bode       nichols     pzmap
+     bodemag    nyquist     sigma
+
 ** plot
    A selection of experiments from iddata identification datasets can be
    plotted by  plot (dat, exp)  instead of  plot (dat(:,:,:,exp)).
